Sat Apr 10 15:00:28 BST 2004  Olly Betts <olly@survex.com>

	* docs/todo.xml:Updated.

Sat Apr 10 00:32:07 BST 2004  Olly Betts <olly@survex.com>

	* PLATFORMS: Added success report for GCC 3.4 (prerelease).

Sat Apr 10 00:27:58 BST 2004  Olly Betts <olly@survex.com>

	* extra/xapian/queryparser.h: Added doxygen documentation comments.

Sat Apr 10 00:23:13 BST 2004  Olly Betts <olly@survex.com>

	* testsuite/testsuite.cc: Removed a now superfluous line.

Sat Apr 10 00:21:15 BST 2004  Olly Betts <olly@survex.com>

	* testsuite/testsuite.cc: Give a more accurate message if valgrind
	  spots a test doing something dodgy (e.g. free() of memory allocated
	  with new).

Thu Apr 08 17:22:20 BST 2004  Olly Betts <olly@survex.com>

	* net/.cvsignore: No longer need to ignore readquery.cc.

Thu Apr 08 17:19:43 BST 2004  Olly Betts <olly@survex.com>

	* include/xapian/base.h: Note in doxygen comment why the ref_count
	  is mutable.

Thu Apr 08 15:33:16 BST 2004  Olly Betts <olly@survex.com>

	* testsuite/testsuite.cc: valgrinding code needs errno.h too.

Thu Apr 08 15:28:44 BST 2004  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Make Xapian::Weight::Weight() protected
	  rather than private as we want to be able to call it from derived
	  classes (GCC 3.4 flags this, other compilers seem to miss it).

Tue Apr 06 03:32:39 BST 2004  Olly Betts <olly@survex.com>

	* net/omerr_string.cc,include/xapian/error.h,
	  include/xapian/errortypes.h,include/xapian/output.h:
	  Fixed some doxygen warnings.

Mon Apr 05 17:21:06 BST 2004  Olly Betts <olly@survex.com>

	* README: There never was an Omsee release - the last BrightStation
	  release was "OpenMuscat 0.4.1".

Mon Apr 05 17:19:38 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc,
	  backends/quartz/quartz_database.h: Make the flush criterion 1000
	  documents changed (added, removed, or replaced) as that seems to
	  perform much better over a wide variety of document sizes.
